src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Quicksand";
  font-display: swap;
  src: url("./fonts/Quicksand-Medium.woff2") format("woff2"),
    url("./fonts/Quicksand-Medium.woff") format("woff");
  font-weight: regular;
  font-style: normal;
}

@font-face {
  font-family: "Quicksand";
  font-display: swap;
  src: url("./fonts/Quicksand-Bold.woff2") format("woff2"),
    url("./fonts/Quicksand-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Roobert";
  font-display: swap;
  src: url("./fonts/Roobert-Regular.woff2") format("woff2"),
    url("./fonts/Roobert-Regular.woff") format("woff");
  font-weight: regular;
  font-style: normal;
}

@layer components {
  h2 {
    @apply text-3xl md:text-4xl;
  }
  h3 {
    @apply text-3xl font-Roobert underline underline-offset-4 leading-normal max-w-prose lg:no-underline;
  }
  a.button {
    @apply flex items-center whitespace-nowrap gap-1 h-14 px-6 py-2 rounded-full text-xl font-bold no-underline w-fit text-marshmallow bg-berry text-liquorice hover:bg-berrypop focus:bg-berrydeep;
  }
  a.link {
    @apply font-sans underline underline-offset-4 hover:text-mango focus:bg-mango focus:text-liquorice;
  }
}

